# wiisxr

./: .gitignore  Makefile  README.md  cdrom.c  decode_xa.c  disr3000a.c  gte.c  mdec.c  misc.c  misc.h  plugins.h  psxbios.c  psxcommon.h  psxcounters.c  psxdma.c  psxhw.c  psxinterpreter.c  psxmem.c  psxmem.h  r3000a.c  r3000a.h  sio.c  sio.h
.github/: ISSUE_TEMPLATE.md
Gamecube/: GamecubeMain.cpp  GamecubePlugins.h  Makefile  Makefile_GC  Makefile_Wii  PadSSSPSX.c  PadSSSPSX.h  PadWiiSX.c  PlugCD.c  PlugPAD.c  Plugin.c  WiiSX.dol  WiiSXR.dol  plugins.c
PeopsGLGPU/: Makefile.am  cfg.c  cfg.h  draw.c  draw.h  externals.h  fps.c  fps.h  gl_ext.h  gpu.c  gpu.h  gte_accuracy.c  gte_accuracy.h  key.c  key.h  menu.c  menu.h  prim.c  prim.h  soft.c  soft.h  stdafx.h  texture.c  texture.h
PeopsGLGPU/gpucfg/: main.c  peopsxgl.ui
PeopsGXGPU/: externals.h  gpu.c  stubs.c
PeopsSoftGPU/: DrawString.c  cfg.c  drawGX.c  externals.h  fps.c  gpu.c  prim.c  soft.c  stdafx.h  swap.h
PeopsSpu109/: PEOPSSPUdebug.c  PEOPSspu.c  cfg.c  cfg.h  debug.h  dsoundoss.h  externals.h  freeze.c  stdafx.h  zn.c
cdrmooby28/: About.cpp  CDDAData.cpp  CDDAData.hpp  CDInterface.hpp  CDTime.hpp  Exception.hpp  FileInterface.cpp  FileInterface.hpp  Frame.hpp  Globals.cpp  Open.cpp  Preferences.cpp  Preferences.hpp  SubchannelData.cpp  SubchannelData.hpp  TimeCache.hpp  TrackInfo.hpp  TrackParser.cpp  TrackParser.hpp  Utils.hpp  defines.h  externs.h
franspu/: cube_audio.c  franspu-alternate.c  franspu.c  franspu.h
ppc/: pGte.h  pR3000A.c  pR3000A.h  pasm.s  ppc.c  ppc.h  reguse.c  reguse.h
(+40 files in other folders)
